--- a/client/src/locales/hi.json
+++ b/client/src/locales/hi.json
@@ -79,6 +79,304 @@
 		"cash": "नकद भुगतान",
 		"online": "ऑनलाइन भुगतान"
 	},
+	"phrases": {
+		"Buyer Dashboard": "खरीदार डैशबोर्ड",
+		"My Orders": "मेरे ऑर्डर",
+		"My Cart": "मेरी कार्ट",
+		"Transaction History": "लेन-देन इतिहास",
+		"Pick-up Address (Farmer)": "पिक-अप पता (किसान)",
+		"Order Total": "कुल आदेश राशि",
+		"Cancel Order": "ऑर्डर रद्द करें",
+		"Mark as Received": "प्राप्त के रूप में चिह्नित करें",
+		"Browse Crops": "फसलें देखें",
+		"Logout": "लॉगआउट",
+		"Active Orders": "सक्रिय ऑर्डर",
+		"Total Orders": "कुल ऑर्डर",
+		"Total Spent": "कुल खर्च",
+		"Order Summary": "ऑर्डर सारांश",
+		"Vehicle Details": "वाहन विवरण",
+		"Pickup Schedule": "पिकअप समय",
+		"Payment": "भुगतान",
+		"Paid Online": "ऑनलाइन भुगतान",
+		"Pay After Delivery": "डिलीवरी के बाद भुगतान",
+		"Pending": "लंबित",
+		"Confirmed": "पुष्टि की गई",
+		"In Transit": "रास्ते में",
+		"Completed": "पूर्ण",
+		"Cancelled": "रद्द",
+		"Shopping Cart": "शॉपिंग कार्ट",
+		"Proceed to Checkout": "चेकआउट के लिए आगे बढ़ें",
+
+		"Loading user data...": "उपयोगकर्ता डेटा लोड हो रहा है...",
+		"Real-time updates disconnected. Reconnecting...": "रियल-टाइम अपडेट डिस्कनेक्ट हो गए। पुनः कनेक्ट कर रहे हैं...",
+		"Welcome back": "वापसी पर स्वागत है",
+		"All time orders": "कुल ऑर्डर (सभी समय)",
+		"In progress": "प्रगति पर",
+		"Successful orders": "सफल ऑर्डर",
+		"No orders yet": "अभी तक कोई ऑर्डर नहीं",
+		"Start shopping to see your orders here": "यहां अपने ऑर्डर देखने के लिए खरीदारी शुरू करें",
+		"Type:": "प्रकार:",
+		"Number:": "नंबर:",
+		"Driver:": "ड्राइवर:",
+		"Phone:": "फोन:",
+		"Date:": "तिथि:",
+		"Time:": "समय:",
+		"Payment:": "भुगतान:",
+		"Address not available": "पता उपलब्ध नहीं",
+		"Your cart is empty": "आपकी कार्ट खाली है",
+		"Discover fresh crops from local farmers": "स्थानीय किसानों से ताज़ी फसलें खोजें",
+		"Start Shopping": "खरीदारी शुरू करें",
+		"items": "आइटम",
+		"Available:": "उपलब्ध:",
+
+		"Connecting Farms to Future": "भविष्य से खेतों को जोड़ना",
+		"Home": "होम",
+		"About": "हमारे बारे में",
+		"Moments": "पल",
+		"Milestones": "उपलब्धियां",
+		"Features": "विशेषताएं",
+		"Get Started": "शुरू करें",
+		"Login": "लॉगिन",
+		"Register": "रजिस्टर",
+		"Register as Farmer or Buyer": "किसान या खरीदार के रूप में रजिस्टर करें",
+		"Register as Worker or Tractor Owner": "श्रमिक या ट्रैक्टर मालिक के रूप में रजिस्टर करें",
+		"Revolutionizing Agriculture": "कृषि में क्रांति",
+		"Connect farmers, merchants, and buyers on one powerful platform. Experience seamless crop trading, equipment booking, and real-time market prices.": "किसानों, व्यापारियों और खरीदारों को एक शक्तिशाली प्लेटफ़ॉर्म पर जोड़ें। बिना रुकावट फसल व्यापार, उपकरण बुकिंग और रियल-टाइम बाजार कीमतों का अनुभव करें।",
+		"Register as Farmer/Buyer": "किसान/खरीदार के रूप में रजिस्टर करें",
+		"Register as Worker/Tractor Owner": "श्रमिक/ट्रैक्टर मालिक के रूप में रजिस्टर करें",
+		"Already have an account?": "क्या आपका खाता पहले से है?",
+		"Login here": "यहां लॉगिन करें",
+		"About Crop Connect": "क्रॉप कनेक्ट के बारे में",
+		"Moments From The Field": "खेतों से पल",
+		"Our Milestones": "हमारी उपलब्धियां",
+		"Our Features": "हमारी विशेषताएं",
+		"Everything you need for modern agriculture in one powerful platform": "आधुनिक कृषि के लिए आपको जो कुछ भी चाहिए, वह सब एक शक्तिशाली प्लेटफ़ॉर्म में",
+		"Ready to Transform Your Farming Experience?": "क्या आप अपनी खेती का अनुभव बदलने के लिए तैयार हैं?",
+		"Join thousands of farmers and merchants already using Crop Connect": "हजारों किसान और व्यापारी जो पहले से ही क्रॉप कनेक्ट का उपयोग कर रहे हैं, उनसे जुड़ें",
+		"Contact Us": "संपर्क करें",
+		"Follow Us": "हमें फॉलो करें",
+		"Stay connected on social media": "सोशल मीडिया पर जुड़े रहें",
+		"All rights reserved.": "सर्वाधिकार सुरक्षित।",
+		"Made with love for Indian Farmers": "भारतीय किसानों के लिए प्यार से बनाया गया",
+
+		"Tractor Owner Dashboard": "ट्रैक्टर मालिक डैशबोर्ड",
+		"Post Service": "सेवा पोस्ट करें",
+		"Budget": "बजट",
+		"Expected:": "अनुमानित:",
+		"Duration": "अवधि",
+		"acres": "एकड़",
+		"land": "भूमि",
+		"Place Your Bid": "अपनी बोली लगाएं",
+		"Requirement Details": "आवश्यकता विवरण",
+		"Work Type": "कार्य प्रकार",
+		"Farmer Budget": "किसान बजट",
+		"Land Size": "भूमि का आकार",
+		"Expected Date": "अनुमानित तिथि",
+		"Location": "स्थान",
+		"Your Bid Amount (₹) *": "आपकी बोली राशि (₹) *",
+		"Estimated Duration (days) *": "अनुमानित अवधि (दिन) *",
+		"Message to Farmer (Optional)": "किसान के लिए संदेश (वैकल्पिक)",
+		"Cancel": "रद्द करें",
+		"Submit Bid": "बोली जमा करें",
+		"All Work Types": "सभी कार्य प्रकार",
+		"All Urgency": "सभी तात्कालिकता",
+		"Normal": "सामान्य",
+		"Urgent": "जरूरी",
+		"Very Urgent": "अत्यंत जरूरी",
+		"Select Service Type": "सेवा प्रकार चुनें",
+		"Type of Service *": "सेवा का प्रकार *",
+		"Tractor Brand *": "ट्रैक्टर ब्रांड *",
+		"Model *": "मॉडल *",
+		"Vehicle Number *": "वाहन संख्या *",
+		"Suitable for Land Type *": "भूमि प्रकार के लिए उपयुक्त *",
+		"Select Land Type": "भूमि प्रकार चुनें",
+		"Dry": "सूखी",
+		"Wet": "गीली",
+		"Post New Tractor Service": "नई ट्रैक्टर सेवा पोस्ट करें",
+		"Recent Notifications": "हाल की सूचनाएं",
+		"Quick Actions": "त्वरित कार्य",
+		"Browse Available Work": "उपलब्ध कार्य देखें",
+		"View My Work": "मेरा काम देखें",
+		"Check Earnings": "कमाई देखें",
+		"Loading your dashboard...": "डैशबोर्ड लोड हो रहा है...",
+		"Starts on": "शुरू होता है",
+		"Mark as Completed": "पूर्ण के रूप में चिह्नित करें",
+		"Call Farmer": "किसान को कॉल करें",
+		"Mark Complete": "पूर्ण चिह्नित करें",
+		"Awaiting Payment": "भुगतान की प्रतीक्षा",
+		"Payment Received": "भुगतान प्राप्त",
+		"Booking ID:": "बुकिंग आईडी:",
+		"requirements available": "आवश्यकताएं उपलब्ध",
+		"No requirements found": "कोई आवश्यकताएं नहीं मिलीं",
+		"Check back later for new work opportunities": "नई कार्य अवसरों के लिए बाद में जांचें",
+		"Closed": "बंद",
+		"Expired": "समाप्त",
+		"Bid Accepted": "बोली स्वीकार की गई",
+		"Bid Rejected": "बोली अस्वीकार की गई",
+		"Bid Placed - Pending": "बोली लगाई गई - लंबित",
+
+		"Booking History": "बुकिंग इतिहास",
+		"Past bookings & records": "पिछली बुकिंग और रिकॉर्ड",
+		"Payment & transaction logs": "भुगतान और लेन-देन लॉग",
+		"My Booking": "मेरी बुकिंग",
+		"Bookings": "बुकिंग्स",
+		"My Bookings": "मेरी बुकिंग्स"
+	,
+		"Worker Dashboard": "श्रमिक डैशबोर्ड",
+		"Manage your work, services, and earnings": "अपने काम, सेवाओं और कमाई का प्रबंधन करें",
+		"Total Work": "कुल कार्य",
+		"Accepted": "स्वीकार किए गए",
+		"Pending Requests": "लंबित अनुरोध",
+		"Total Earnings": "कुल कमाई",
+		"Work Status": "कार्य स्थिति",
+		"Completed:": "पूर्ण:",
+		"In Progress:": "प्रगति पर:",
+		"Pending:": "लंबित:",
+		"Rejected:": "अस्वीकृत:",
+		"Earnings Summary": "कमाई सारांश",
+		"Total Earned:": "कुल कमाई:",
+		"Pending Payment:": "लंबित भुगतान:",
+		"Top Available Work": "शीर्ष उपलब्ध कार्य",
+		"Top Active Work": "शीर्ष सक्रिय कार्य",
+		"No active work": "कोई सक्रिय कार्य नहीं",
+		"Top Transactions": "शीर्ष लेन-देन",
+		"No transactions yet": "अभी तक कोई लेन-देन नहीं",
+		"Recent Activity": "हाल की गतिविधि",
+		"No recent activity": "कोई हाल की गतिविधि नहीं",
+		"My Posted Services": "मेरी पोस्ट की गई सेवाएं",
+		"Post New Service": "नई सेवा पोस्ट करें",
+		"No Services Posted": "कोई सेवाएं पोस्ट नहीं की गई",
+		"Post your services to get hired by farmers": "किसानों द्वारा नियुक्त होने के लिए अपनी सेवाएं पोस्ट करें",
+		"Post Your First Service": "अपनी पहली सेवा पोस्ट करें",
+		"Booked": "बुक्ड",
+		"Available": "उपलब्ध",
+		"Rate:": "दर:",
+		"Experience:": "अनुभव:",
+		"Hours:": "घंटे:",
+		"Skills:": "कौशल:",
+		"View Booking →": "बुकिंग देखें →",
+		"Hire Requests from Farmers": "किसानों से हायर अनुरोध",
+		"No Hire Requests": "कोई हायर अनुरोध नहीं",
+		"Farmers' hire requests will appear here": "किसानों के हायर अनुरोध यहां दिखाई देंगे",
+		"Amount:": "राशि:",
+		"Received:": "प्राप्त:",
+		"Email:": "ईमेल:",
+		"Notes:": "नोट्स:",
+		"Work Details:": "कार्य विवरण:",
+		"Start Date:": "प्रारंभ तिथि:",
+		"Duration:": "अवधि:",
+		"day(s)": "दिन",
+		"Work:": "कार्य:",
+		"Accept & Book": "स्वीकार करें और बुक करें",
+		"Reject": "अस्वीकार",
+		"Request accepted! Booking created.": "अनुरोध स्वीकार किया गया! बुकिंग बनाई गई।",
+		"Request rejected": "अनुरोध अस्वीकार किया गया",
+		"Reason:": "कारण:",
+		"Active Work": "सक्रिय कार्य",
+		"Starts on": "शुरू होता है",
+		"Mark as Completed": "पूर्ण के रूप में चिह्नित करें",
+		"Payment Received Successfully": "भुगतान सफलतापूर्वक प्राप्त",
+		"Waiting for payment from farmer...": "किसान से भुगतान की प्रतीक्षा...",
+		"Find Available Jobs": "उपलब्ध नौकरियां खोजें",
+		"Search by District": "जिले के अनुसार खोजें",
+		"All Work Types": "सभी कार्य प्रकार",
+		"Farm Labor": "खेत मजदूर",
+		"Harvester": "हार्वेस्टर",
+		"Irrigator": "सिंचाई करने वाला",
+		"Sprayer": "स्प्रेयर",
+		"General Helper": "सामान्य सहायक",
+		"Ploughing": "जुताई",
+		"Seeding": "बीजाई",
+		"Pesticide Application": "कीटनाशक अनुप्रयोग",
+		"Max Wage ₹": "अधिकतम मजदूरी ₹",
+		"Searching...": "खोज जारी...",
+		"Search": "खोजें",
+		"Reset Filters": "फ़िल्टर रीसेट करें",
+		"No Available Jobs": "कोई उपलब्ध नौकरियां नहीं",
+		"Try adjusting your search filters or check back later": "अपनी खोज फ़िल्टर समायोजित करें या बाद में जांचें",
+		"Open": "खुला",
+		"Posted by": "द्वारा पोस्ट किया गया",
+		"Wage:": "मजदूरी:",
+		"Start:": "प्रारंभ:",
+		"Expired": "समाप्त",
+		"Benefits:": "लाभ:",
+		"Food Provided": "भोजन उपलब्ध",
+		"Transport Provided": "परिवहन उपलब्ध",
+		"Application Pending...": "आवेदन लंबित...",
+		"Application Accepted!": "आवेदन स्वीकार किया गया!",
+		"View Work →": "काम देखें →",
+		"Application Rejected": "आवेदन अस्वीकार किया गया",
+		"Application Pending": "आवेदन लंबित",
+		"View My Work": "मेरा काम देखें",
+		"Apply for Job": "नौकरी के लिए आवेदन करें",
+		"No work in this category": "इस श्रेणी में कोई काम नहीं",
+		"Place Bid": "बोली लगाएं",
+		"Completed Works": "पूर्ण हुए कार्य",
+		"Pending Payment": "लंबित भुगतान",
+		"Earnings History": "कमाई का इतिहास",
+		"No Earnings Yet": "अभी तक कोई कमाई नहीं",
+		"Your payment history will appear here": "आपका भुगतान इतिहास यहां दिखाई देगा",
+		"Paid": "भुगतान किया गया",
+		"Pending Payments": "लंबित भुगतान",
+		"Currently Booked": "वर्तमान में बुक",
+		"Total Services:": "कुल सेवाएं:",
+		"Booked:": "बुक्ड:",
+		"Experience (years) *": "अनुभव (वर्ष) *",
+		"Working Hours Per Day": "प्रतिदिन कार्य घंटे",
+		"Contact Number": "संपर्क नंबर",
+		"District": "जिला",
+		"State": "राज्य",
+		"Pincode": "पिनकोड",
+		"Skills (comma separated)": "कौशल (अल्पविराम से अलग)",
+		"Separate multiple skills with commas": "एक से अधिक कौशलों को अल्पविराम से अलग करें",
+		"Description": "विवरण",
+		"Describe your service...": "अपनी सेवा का विवरण दें...",
+		"Posting...": "पोस्ट किया जा रहा है...",
+		"Updating...": "अपडेट किया जा रहा है...",
+		"Update Service": "सेवा अपडेट करें",
+		"Edit Service": "सेवा संपादित करें",
+		"Post New Service": "नई सेवा पोस्ट करें",
+		"Work Type": "कार्य प्रकार",
+		"Select Work Type": "कार्य प्रकार चुनें",
+		"Other": "अन्य",
+		"Charge Per Day (₹) *": "प्रति दिन शुल्क (₹) *",
+		"Total Services": "कुल सेवाएं",
+		"Active Requests": "सक्रिय अनुरोध",
+		"Accepted Work": "स्वीकृत कार्य",
+
+		"Products": "उत्पाद",
+		"Crop Listings": "फसल सूची",
+		"Crop status": "फसल स्थिति",
+		"Booking": "बुकिंग",
+		"Available Work": "उपलब्ध कार्य",
+		"My Services": "मेरी सेवाएं",
+		"My Work": "मेरा काम",
+		"Hire Requests": "हायर अनुरोध",
+		"Overview": "अवलोकन",
+		"Earnings": "कमाई",
+		"Payments": "भुगतान",
+		"Search by work type or district...": "कार्य प्रकार या जिले से खोजें...",
+		"All Work Types": "सभी कार्य प्रकार",
+		"All Urgency": "सभी तात्कालिकता",
+		"Normal": "सामान्य",
+		"Urgent": "जरूरी",
+		"Very Urgent": "अत्यंत जरूरी",
+		"Clear Filters": "फ़िल्टर साफ करें",
+		"No requirements found": "कोई आवश्यकताएं नहीं मिलीं",
+		"Add New Service": "नई सेवा जोड़ें",
+		"No services posted yet": "अभी तक कोई सेवाएं पोस्ट नहीं की गई",
+		"Post your first tractor service to get started": "शुरू करने के लिए अपनी पहली ट्रैक्टर सेवा पोस्ट करें",
+		"Engaged": "व्यस्त",
+		"Service:": "सेवा:",
+		"Land Type:": "भूमि प्रकार:",
+		"Charge:": "शुल्क:",
+		"Location:": "स्थान:",
+		"Payments & Earnings": "भुगतान और कमाई",
+		"Completed Payments": "पूर्ण किए गए भुगतान",
+		"pending": "लंबित",
+		"Your work will appear here": "आपका काम यहां दिखाई देगा"
+	},
+
 	"common": {
 		"search": "खोजें",
 		"filter": "फ़िल्टर",
