--- a/client/src/locales/te.json
+++ b/client/src/locales/te.json
@@ -79,6 +79,304 @@
 		"cash": "నగదు చెల్లింపు",
 		"online": "ఆన్‌లైన్ చెల్లింపు"
 	},
+	"phrases": {
+		"Buyer Dashboard": "కొనుగోలుదారు డాష్‌బోర్డ్",
+		"My Orders": "నా ఆర్డర్లు",
+		"My Cart": "నా కార్ట్",
+		"Transaction History": "లావాదేవీ చరిత్ర",
+		"Pick-up Address (Farmer)": "పికప్ చిరునామా (రైతు)",
+		"Order Total": "మొత్తం ఆర్డర్",
+		"Cancel Order": "ఆర్డర్ రద్దు చేయండి",
+		"Mark as Received": "స్వీకరించబడిందిగా గుర్తించండి",
+		"Browse Crops": "పంటలను చూడండి",
+		"Logout": "లాగ్ అవుట్",
+		"Active Orders": "సక్రియ ఆర్డర్లు",
+		"Total Orders": "మొత్తం ఆర్డర్లు",
+		"Total Spent": "మొత్తం ఖర్చు",
+		"Order Summary": "ఆర్డర్ సారాంశం",
+		"Vehicle Details": "వాహన వివరాలు",
+		"Pickup Schedule": "పికప్ షెడ్యూల్",
+		"Payment": "చెల్లింపు",
+		"Paid Online": "ఆన్‌లైన్ చెల్లింపు",
+		"Pay After Delivery": "డెలివరీ తర్వాత చెల్లించండి",
+		"Pending": "పెండింగ్",
+		"Confirmed": "నిర్ధారించబడింది",
+		"In Transit": "దారిలో",
+		"Completed": "పూర్తైంది",
+		"Cancelled": "రద్దు",
+		"Shopping Cart": "షాపింగ్ కార్ట్",
+		"Proceed to Checkout": "చెకౌట్‌కు కొనసాగండి",
+
+		"Loading user data...": "వాడుకరి డేటా లోడ్ అవుతోంది...",
+		"Real-time updates disconnected. Reconnecting...": "రియల్-టైమ్ నవీకరణలు డిస్కనెక్ట్ అయ్యాయి. మళ్లీ కనెక్ట్ అవుతున్నాము...",
+		"Welcome back": "మళ్ళీ స్వాగతం",
+		"All time orders": "మొత్తం ఆర్డర్లు (అన్ని కాలం)",
+		"In progress": "ప్రగతిలో ఉంది",
+		"Successful orders": "విజయవంతమైన ఆర్డర్లు",
+		"No orders yet": "ఇంకా ఆర్డర్లు లేవు",
+		"Start shopping to see your orders here": "మీ ఆర్డర్లు ఇక్కడ చూడటానికి షాపింగ్ ప్రారంభించండి",
+		"Type:": "రకం:",
+		"Number:": "నంబర్:",
+		"Driver:": "డ్రైవర్:",
+		"Phone:": "ఫోన్:",
+		"Date:": "తేదీ:",
+		"Time:": "సమయం:",
+		"Payment:": "చెల్లింపు:",
+		"Address not available": "చిరునామా అందుబాటులో లేదు",
+		"Your cart is empty": "మీ కార్ట్ ఖాళీగా ఉంది",
+		"Discover fresh crops from local farmers": "స్థానిక రైతుల నుండి తాజా పంటలను కనుగొనండి",
+		"Start Shopping": "షాపింగ్ ప్రారంభించండి",
+		"items": "అంశాలు",
+		"Available:": "అందుబాటులో:",
+
+		"Connecting Farms to Future": "భవిష్యత్తుతో వ్యవసాయాలను కలుపుతూ",
+		"Home": "హోమ్",
+		"About": "మా గురించి",
+		"Moments": "క్షణాలు",
+		"Milestones": "మైలురాళ్లు",
+		"Features": "ఫీచర్లు",
+		"Get Started": "ప్రారంభించండి",
+		"Login": "లాగిన్",
+		"Register": "రిజిస్టర్",
+		"Register as Farmer or Buyer": "రైతు లేదా కొనుగోలుదారుగా రిజిస్టర్ అవ్వండి",
+		"Register as Worker or Tractor Owner": "కార్మికుడు లేదా ట్రాక్టర్ యజమానిగా రిజిస్టర్ అవ్వండి",
+		"Revolutionizing Agriculture": "వ్యవసాయంలో విప్లవం",
+		"Connect farmers, merchants, and buyers on one powerful platform. Experience seamless crop trading, equipment booking, and real-time market prices.": "కిసాన్లు, వ్యాపారులు మరియు కొనుగోలుదారులను ఒక శక్తివంతమైన ప్లేట్‌ఫారమ్‌లో కలపండి. అంతరాయం లేకుండా పంటల వ్యాపారం, పరికరాల బుకింగ్ మరియు రియల్-టైమ్ మార్కెట్ ధరలను అనుభవించండి.",
+		"Register as Farmer/Buyer": "రైతు/కొనుగోలుదారుగా రిజిస్టర్ అవ్వండి",
+		"Register as Worker/Tractor Owner": "కార్మికుడు/ట్రాక్టర్ యజమానిగా రిజిస్టర్ అవ్వండి",
+		"Already have an account?": "ఇప్పటికే ఖాతా ఉందా?",
+		"Login here": "ఇక్కడ లాగిన్ అవ్వండి",
+		"About Crop Connect": "క్రాప్ కనెక్ట్ గురించి",
+		"Moments From The Field": "పొలం నుండి క్షణాలు",
+		"Our Milestones": "మా మైలురాళ్లు",
+		"Our Features": "మా ఫీచర్లు",
+		"Everything you need for modern agriculture in one powerful platform": "ఆధునిక వ్యవసాయానికి అవసరమైన ప్రతిదీ ఒక శక్తివంతమైన ప్లాట్‌ఫారమ్‌లో",
+		"Ready to Transform Your Farming Experience?": "మీ వ్యవసాయ అనుభవాన్ని మార్చడానికి సిద్ధంగా ఉన్నారా?",
+		"Join thousands of farmers and merchants already using Crop Connect": "క్రాప్ కనెక్ట్‌ను ఇప్పటికే ఉపయోగిస్తున్న వేలాది రైతులు మరియు వ్యాపారులతో చేరండి",
+		"Contact Us": "మమ్మల్ని సంప్రదించండి",
+		"Follow Us": "మమ్మల్ని ఫాలో అవ్వండి",
+		"Stay connected on social media": "సోషల్ మీడియాలో కనెక్ట్‌డ్‌గా ఉండండి",
+		"All rights reserved.": "అన్ని హక్కులు రిజర్వ్ చేయబడ్డాయి.",
+		"Made with love for Indian Farmers": "భారతీయ రైతుల కోసం ప్రేమతో రూపొందించబడింది",
+
+		"Tractor Owner Dashboard": "ట్రాక్టర్ యజమాని డ్యాష్‌బోర్డ్",
+		"Post Service": "సర్వీస్ పోస్ట్ చేయండి",
+		"Budget": "బడ్జెట్",
+		"Expected:": "అంచనా:",
+		"Duration": "వ్యవధి",
+		"acres": "ఎకరాలు",
+		"land": "భూమి",
+		"Place Your Bid": "మీ బిడ్ పెట్టండి",
+		"Requirement Details": "అవసరాల వివరాలు",
+		"Work Type": "పని రకం",
+		"Farmer Budget": "రైతు బడ్జెట్",
+		"Land Size": "భూమి పరిమాణం",
+		"Expected Date": "అంచనా తేదీ",
+		"Location": "స్థానం",
+		"Your Bid Amount (₹) *": "మీ బిడ్ మొత్తం (₹) *",
+		"Estimated Duration (days) *": "అంచనా వ్యవధి (రోజులు) *",
+		"Message to Farmer (Optional)": "రైతుకు సందేశం (ఐచ్చికం)",
+		"Cancel": "రద్దు",
+		"Submit Bid": "బిడ్ సమర్పించండి",
+		"All Work Types": "అన్ని పని రకాలు",
+		"All Urgency": "అన్ని త్వరితగతి",
+		"Normal": "సాధారణ",
+		"Urgent": "తక్షణం",
+		"Very Urgent": "అత్యవసరం",
+		"Select Service Type": "సేవ రకం ఎంచుకోండి",
+		"Type of Service *": "సేవ రకం *",
+		"Tractor Brand *": "ట్రాక్టర్ బ్రాండ్ *",
+		"Model *": "మోడల్ *",
+		"Vehicle Number *": "వాహన సంఖ్య *",
+		"Suitable for Land Type *": "భూమి రకానికి అనుకూలం *",
+		"Select Land Type": "భూమి రకం ఎంచుకోండి",
+		"Dry": "ఎండ",
+		"Wet": "తడిగా",
+		"Post New Tractor Service": "కొత్త ట్రాక్టర్ సేవ పోస్ట్ చేయండి",
+		"Recent Notifications": "ఇటీవలి నోటిఫికేషన్లు",
+		"Quick Actions": "త్వరిత చర్యలు",
+		"Browse Available Work": "అందుబాటులో ఉన్న పనిని చూడండి",
+		"View My Work": "నా పనిని చూడండి",
+		"Check Earnings": "ఆదాయం చూడండి",
+		"Loading your dashboard...": "మీ డ్యాష్‌బోర్డ్ లోడ్ అవుతోంది...",
+		"Starts on": "ప్రారంభం",
+		"Mark as Completed": "పూర్తయిందిగా గుర్తించండి",
+		"Call Farmer": "రైతుని కాల్ చేయండి",
+		"Mark Complete": "పూర్తిగా గుర్తించండి",
+		"Awaiting Payment": "చెల్లింపుకు వేచి ఉంది",
+		"Payment Received": "చెల్లింపు అందింది",
+		"Booking ID:": "బుకింగ్ ఐడి:",
+		"requirements available": "అవసరాలు అందుబాటులో",
+		"No requirements found": "అవసరాలు లభించలేదు",
+		"Check back later for new work opportunities": "కొత్త అవకాశాల కోసం తర్వాత చూడండి",
+		"Closed": "మూసివేయబడింది",
+		"Expired": "గడువు ముగిసింది",
+		"Bid Accepted": "బిడ్ ఆమోదించబడింది",
+		"Bid Rejected": "బిడ్ తిరస్కరించబడింది",
+		"Bid Placed - Pending": "బిడ్ పెట్టబడింది - పెండింగ్",
+
+		"Booking History": "బుకింగ్ చరిత్ర",
+		"Past bookings & records": "గత బుకింగ్‌లు & రికార్డులు",
+		"Payment & transaction logs": "చెల్లింపు & లావాదేవీ లాగ్లు",
+		"My Booking": "నా బుకింగ్",
+		"Bookings": "బుకింగ్‌లు",
+		"My Bookings": "నా బుకింగ్‌లు"
+	,
+		"Worker Dashboard": "కార్మికుడి డ్యాష్‌బోర్డ్",
+		"Manage your work, services, and earnings": "మీ పని, సేవలు మరియు ఆదాయాన్ని నిర్వహించండి",
+		"Total Work": "మొత్తం పని",
+		"Accepted": "ఆమోదించబడ్డాయి",
+		"Pending Requests": "పెండింగ్ అభ్యర్థనలు",
+		"Total Earnings": "మొత్తం ఆదాయం",
+		"Work Status": "పని స్థితి",
+		"Completed:": "పూర్తయినవి:",
+		"In Progress:": "ప్రగతిలో:",
+		"Pending:": "పెండింగ్:",
+		"Rejected:": "తిరస్కరించబడ్డాయి:",
+		"Earnings Summary": "ఆదాయం సారాంశం",
+		"Total Earned:": "మొత్తం సంపాదించింది:",
+		"Pending Payment:": "పెండింగ్ చెల్లింపు:",
+		"Top Available Work": "అగ్ర అందుబాటులో పని",
+		"Top Active Work": "అగ్ర క్రియాశీల పని",
+		"No active work": "సక్రియ పని లేదు",
+		"Top Transactions": "అగ్ర లావాదేవీలు",
+		"No transactions yet": "ఇంకా లావాదేవీలు లేవు",
+		"Recent Activity": "ఇటీవలి క్రియలు",
+		"No recent activity": "ఇటీవలి క్రియలు లేవు",
+		"My Posted Services": "నేను పోస్ట్ చేసిన సేవలు",
+		"Post New Service": "కొత్త సేవను పోస్ట్ చేయండి",
+		"No Services Posted": "సేవలు పోస్ట్ చేయబడలేదు",
+		"Post your services to get hired by farmers": "రైతులు నియమించుకునేందుకు మీ సేవలను పోస్ట్ చేయండి",
+		"Post Your First Service": "మీ మొదటి సేవను పోస్ట్ చేయండి",
+		"Booked": "బుక్ అయింది",
+		"Available": "అందుబాటులో",
+		"Rate:": "రేటు:",
+		"Experience:": "అనుభవం:",
+		"Hours:": "గంటలు:",
+		"Skills:": "నైపుణ్యాలు:",
+		"View Booking →": "బుకింగ్ చూడండి →",
+		"Hire Requests from Farmers": "రైతుల నుండి నియామక అభ్యర్థనలు",
+		"No Hire Requests": "నియామక అభ్యర్థనలు లేవు",
+		"Farmers' hire requests will appear here": "రైతుల నియామక అభ్యర్థనలు ఇక్కడ కనిపిస్తాయి",
+		"Amount:": "మొత్తం:",
+		"Received:": "స్వీకరించినది:",
+		"Email:": "ఇమెయిల్:",
+		"Notes:": "గమనికలు:",
+		"Work Details:": "పని వివరాలు:",
+		"Start Date:": "ప్రారంభ తేదీ:",
+		"Duration:": "వ్యవధి:",
+		"day(s)": "రోజులు",
+		"Work:": "పని:",
+		"Accept & Book": "ఆమోదించి బుక్ చేయండి",
+		"Reject": "తిరస్కరించండి",
+		"Request accepted! Booking created.": "అభ్యర్థన ఆమోదించబడింది! బుకింగ్ సృష్టించబడింది.",
+		"Request rejected": "అభ్యర్థన తిరస్కరించబడింది",
+		"Reason:": "కారణం:",
+		"Active Work": "క్రియాశీల పని",
+		"Starts on": "ప్రారంభం",
+		"Mark as Completed": "పూర్తయిందిగా గుర్తించండి",
+		"Payment Received Successfully": "చెల్లింపు విజయవంతంగా అందింది",
+		"Waiting for payment from farmer...": "రైతు నుండి చెల్లింపుకు వేచి ఉంది...",
+		"Find Available Jobs": "అందుబాటులో ఉన్న ఉద్యోగాలను కనుగొనండి",
+		"Search by District": "జిల్లా ద్వారా శోధించండి",
+		"All Work Types": "అన్ని పని రకాలు",
+		"Farm Labor": "వ్యవసాయ కార్మికుడు",
+		"Harvester": "హార్వెస్టర్",
+		"Irrigator": "నీటి పారుదల కార్మికుడు",
+		"Sprayer": "స్ప్రేయర్",
+		"General Helper": "సాధారణ సహాయకుడు",
+		"Ploughing": "దున్నడం",
+		"Seeding": "విత్తనాలు వేయడం",
+		"Pesticide Application": "పెస్టిసైడ్ అప్లికేషన్",
+		"Max Wage ₹": "గరిష్ట కూలి ₹",
+		"Searching...": "శోధిస్తున్నాము...",
+		"Search": "శోధించండి",
+		"Reset Filters": "ఫిల్టర్లు రీసెట్ చేయండి",
+		"No Available Jobs": "అందుబాటులో ఉద్యోగాలు లేవు",
+		"Try adjusting your search filters or check back later": "మీ శోధన ఫిల్టర్లను సర్దుబాటు చేయండి లేదా తర్వాత ప్రయత్నించండి",
+		"Open": "తెరచి ఉంది",
+		"Posted by": "పోస్ట్ చేసినవారు",
+		"Wage:": "కూలి:",
+		"Start:": "ప్రారంభం:",
+		"Expired": "గడువు ముగిసింది",
+		"Benefits:": "లాభాలు:",
+		"Food Provided": "ఆహారం అందించబడింది",
+		"Transport Provided": "రవాణా అందించబడింది",
+		"Application Pending...": "అప్లికేషన్ పెండింగ్...",
+		"Application Accepted!": "అప్లికేషన్ ఆమోదించబడింది!",
+		"View Work →": "పని చూడండి →",
+		"Application Rejected": "అప్లికేషన్ తిరస్కరించబడింది",
+		"Application Pending": "అప్లికేషన్ పెండింగ్",
+		"View My Work": "నా పనిని చూడండి",
+		"Apply for Job": "ఉద్యోగానికి దరఖాస్తు చేయండి",
+		"No work in this category": "ఈ విభాగంలో పని లేదు",
+		"Place Bid": "బిడ్ పెట్టండి",
+		"Completed Works": "పూర్తయిన పనులు",
+		"Pending Payment": "పెండింగ్ చెల్లింపు",
+		"Earnings History": "ఆదాయ చరిత్ర",
+		"No Earnings Yet": "ఇంకా ఆదాయం లేదు",
+		"Your payment history will appear here": "మీ చెల్లింపు చరిత్ర ఇక్కడ కనిపిస్తుంది",
+		"Paid": "చెల్లించబడింది",
+		"Pending Payments": "పెండింగ్ చెల్లింపులు",
+		"Currently Booked": "ప్రస్తుతం బుక్ చేయబడి ఉంది",
+		"Total Services:": "మొత్తం సేవలు:",
+		"Booked:": "బుక్‌డ్:",
+		"Experience (years) *": "అనుభవం (సంవత్సరాలు) *",
+		"Working Hours Per Day": "రోజుకు పని గంటలు",
+		"Contact Number": "సంప్రదింపు సంఖ్య",
+		"District": "జిల్లా",
+		"State": "రాష్ట్రం",
+		"Pincode": "పిన్ కోడ్",
+		"Skills (comma separated)": "నైపుణ్యాలు (కామాలతో వేరు)",
+		"Separate multiple skills with commas": "అనేక నైపుణ్యాలను కామాలతో వేరు చేయండి",
+		"Description": "వివరణ",
+		"Describe your service...": "మీ సేవను వివరించండి...",
+		"Posting...": "పోస్ట్ చేస్తోంది...",
+		"Updating...": "నవీకరిస్తోంది...",
+		"Update Service": "సేవను అప్‌డేట్ చేయండి",
+		"Edit Service": "సేవను సవరించండి",
+		"Post New Service": "కొత్త సేవను పోస్ట్ చేయండి",
+		"Work Type": "పని రకం",
+		"Select Work Type": "పని రకం ఎంచుకోండి",
+		"Other": "ఇతర",
+		"Charge Per Day (₹) *": "రోజుకు ఛార్జ్ (₹) *",
+		"Total Services": "మొత్తం సేవలు",
+		"Active Requests": "సక్రియ అభ్యర్థనలు",
+		"Accepted Work": "ఆమోదించబడిన పని",
+
+		"Products": "ఉత్పత్తులు",
+		"Crop Listings": "పంటల జాబితా",
+		"Crop status": "పంట స్థితి",
+		"Booking": "బుకింగ్",
+		"Available Work": "అందుబాటులో పని",
+		"My Services": "నా సేవలు",
+		"My Work": "నా పని",
+		"Hire Requests": "నియామక అభ్యర్థనలు",
+		"Overview": "అవలోకనం",
+		"Earnings": "ఆదాయం",
+		"Payments": "చెల్లింపులు",
+		"Search by work type or district...": "పని రకం లేదా జిల్లాతో శోధించండి...",
+		"All Work Types": "అన్ని పని రకాలు",
+		"All Urgency": "అన్ని అత్యవసరత",
+		"Normal": "సాధారణ",
+		"Urgent": "తక్షణం",
+		"Very Urgent": "చాలా అత్యవసరం",
+		"Clear Filters": "ఫిల్టర్లను క్లియర్ చేయండి",
+		"No requirements found": "అవసరాలు లభించలేదు",
+		"Add New Service": "కొత్త సేవను జోడించండి",
+		"No services posted yet": "ఇంకా సేవలు పోస్ట్ చేయబడలేదు",
+		"Post your first tractor service to get started": "ప్రారంభించేందుకు మీ మొదటి ట్రాక్టర్ సేవను పోస్ట్ చేయండి",
+		"Engaged": "నిమగ్నం",
+		"Service:": "సేవ:",
+		"Land Type:": "భూమి రకం:",
+		"Charge:": "చార్జ్:",
+		"Location:": "స్థానం:",
+		"Payments & Earnings": "చెల్లింపులు & ఆదాయం",
+		"Completed Payments": "పూర్తయిన చెల్లింపులు",
+		"pending": "పెండింగ్",
+		"Your work will appear here": "మీ పని ఇక్కడ కనిపిస్తుంది"
+	},
+
 	"common": {
 		"search": "శోధించండి",
 		"filter": "ఫిల్టర్",
